<resources>
    <string name="app_name">Version 0.01</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Имя пользователя</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Вход</string>
    <string name="action_sign_in_short">Вход</string>
    <string name="welcome">"Добро пожаловать !"</string>
    <string name="invalid_username">Не правильное имя пользователя</string>
    <string name="invalid_password">Пароль должен быть больше 5 символов</string>
    <string name="login_failed">"Авторизация не прошла"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_events">Список мероприятий</string>
    <string name="menu_events_clients">Список всех мероприятий</string>
    <string name="menu_clients">Список клиентов</string>
    <string name="menu_info">Справка</string>
    <string name="menu_exit">Выйти</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_equipment">Оборудование</string>
    <string name="menu_my_game">Мои игры</string>
    <string name="menu_my_order">Мои заказы</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_activity_navigation_main">NavigationMainActivity</string>
    <string name="title_activity_main_driwer">MainActivityDriwer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //////////////////////////////////////////////////////////


</resources>